force-app/main/default/objects/Event_Speaker__c/fields/Duplication_Record_Chk__c.field-meta.xml
<CustomField>
    <fullName>Duplication_Record_Chk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplication Record Chk</label>
    <type>Checkbox</type>
</CustomField>