force-app/main/default/objects/Event_Speaker__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Speakers</relationshipLabel>
    <relationshipName>Event_Speaker_Junction_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>