force-app/main/default/objects/Event_Speaker__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipName>Event_Speaker_Junction_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>