force-app/main/default/objects/Event_Speaker__c/validationRules/Validate_duplicate_speakers.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_duplicate_speakers</fullName>
    <active>true</active>
    <errorConditionFormula>(Speaker__c =  Speaker__r.Speaker_Name__c )</errorConditionFormula>
    <errorDisplayField>Speaker__c</errorDisplayField>
    <errorMessage>Avoid duplicity</errorMessage>
</ValidationRule>